flask-clusterip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  labels:
    app: flaskapp-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: flaskapp
