flask-new-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-lb
  labels:
    app: flaskapp-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: gke-flask-app
