flask-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
  labels:
    app: nodeport-svc
spec:
  type: NodePort
  ports:
  - name: http-nodeport
    targetPort: http-flask
    nodePort: 31080
    port: 80
    protocol: TCP
  selector:
    app: gke-flask-app
